force-app/main/default/objects/Idea_Comment__c/Idea_Comment__c.object-meta.xml
<CustomObject>
    <description>Optional comment object for ideas when not using Chatter.</description>
    <label>Idea Comment</label>
    <nameField>
        <label>Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>