force-app/main/default/objects/Idea_Comment__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Body of the comment.</description>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>