force-app/main/default/objects/Idea_Comment__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>User who created this comment (for reference in case system fields are not exposed).</description>
    <label>Created By (Custom)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Idea Comments</relationshipLabel>
    <relationshipName>User_Idea_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>