force-app/main/default/objects/Idea_Comment__c/fields/Parent_Comment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent comment when this is a reply. Null for top-level comments.</description>
    <label>Parent Comment</label>
    <referenceTo>Idea_Comment__c</referenceTo>
    <relationshipLabel>Replies</relationshipLabel>
    <relationshipName>Replies</relationshipName>
    <type>Lookup</type>
</CustomField>